--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="catalogo de productos ecológicos de Ecovica">
+    <meta name="description" content="Tienda Online de productos ecológicos de Ecovica">
     <meta name="keywords"  content="productos, ecología, cuidado personal, higiene, venta, compra, Ecovica">
     <title>Ecovica, Tienda Online</title>
     <link rel="stylesheet" href="css/estilosgenerales.css">
